# lib/db/src/schema/index.ts
@@ -13,3 +13,4 @@ export * from "./release-epics";
 export * from "./project-release-keywords";
 export * from "./sprint-capacity";
 export * from "./capacity-roster";
+export * from "./capacity-absence";
